Finished frontend category splitting and some minor changes here and there again

--- a/Frontend/primary-button/primary-button.html
+++ b/Frontend/primary-button/primary-button.html
@@ -28,7 +28,7 @@
 </head>
 <body class="darkmode">
 
-    <a class="primary-button mail" href="#">
+    <a class="primary-button disabled mail" href="#">
         <i class="material-icons">mail</i>
         <p>E-Mail schreiben</p>
     </a>
