--- a/Frontend/material-inputs/material-inputs.html
+++ b/Frontend/material-inputs/material-inputs.html
@@ -36,8 +36,8 @@
     </div>
 
     <div class="container">
-        <span class="text-input-container input-container">
-            <label class="icon" for="input"><i class="material-icons">person</i></label>
+        <span class="text-input-container input-container required mail">
+            <label class="icon" for="input"><i class="material-icons">email</i></label>
             <input name="text-topic" class="text-input" type="text" id="input"/>
             <label class="text" for="input">Placeholder</label>
             <span class="underline"></span>
