--- a/Frontend/test.html
+++ b/Frontend/test.html
@@ -10,12 +10,19 @@
 
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
     <link rel="stylesheet" href="css/general-style.css" type="text/css" />
+    <link rel="stylesheet" href="css/material-icons-font.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/header.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/primary-button.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/secondary-button.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/material-inputs.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/table.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/modal.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/notification.css" type="text/css" />
+    <link rel="stylesheet" href="css/components/loader.css" type="text/css" />
 
-    <!--[if lt IE 9]>
-    <script src="/SV-Tora/js/html5shiv.js"></script>
-    <![endif]-->
+    <script src="js/Modules/LoadModule.js"></script>
 
-    <script src="js/GeneralModule.js"></script>
+    <script src="test.js"></script>
 
     <!--
 
@@ -25,8 +32,6 @@
 
 </head>
 <body class="darkmode">
-
-
 
 </body>
 </html>
