Implemented category merging

--- a/Frontend/competition-dashboard/competition-dashboard.html
+++ b/Frontend/competition-dashboard/competition-dashboard.html
@@ -92,11 +92,11 @@
                     </a>
                     <a class="primary-button change-category" href="#">
                         <i class="material-icons">compare_arrows</i>
-                        <p>Kategorien ändern</p>
+                        <p>Kategorien administrieren</p>
                     </a>
                     <a class="primary-button fight" href="#">
                         <i class="material-icons">group</i>
-                        <p>Kämpfen</p>
+                        <p>Kampfsysteme wählen</p>
                     </a>
                 </div>
                 <a class="primary-button delete" href="#">
